--- a/index.html
+++ b/index.html
@@ -333,12 +333,11 @@
 </section>
 
 <!--Footer-->
-<section id="footer" class="gradient-bg">
+<section id="footer">
 <div class="container"> 
   <footer class="py-3 my-4">
      <ul class="nav justify-content-center pb-3 mb-3">
-       
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
+       <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">My Cats</a></li>
         <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Find Cats</a></li> 
         <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li> 
@@ -346,8 +345,17 @@
       </ul> 
       <hr>
         <p class="text-center text-body-secondary">© MeowMatch</p>
-       </footer> 
-      </div>
+   </footer> 
+</div>
 </section>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
